[gd_scene load_steps=18 format=3 uid="uid://h1r7utk8gtn2"]

[ext_resource type="Texture2D" uid="uid://bksxumr55ahwh" path="res://Assets/Board.png" id="1_v3gex"]
[ext_resource type="Script" path="res://Scripts/Player_2d.gd" id="2_t7nvd"]
[ext_resource type="Script" path="res://Scenes/world_scene.gd" id="2_xiw4f"]
[ext_resource type="Texture2D" uid="uid://b5o23nwu2aesa" path="res://Assets/Player.png" id="3_81la5"]
[ext_resource type="Texture2D" uid="uid://b23kgirec6jvp" path="res://Assets/Computer.png" id="4_vwvk0"]
[ext_resource type="Script" path="res://Scenes/Ball.gd" id="5_2pjcf"]
[ext_resource type="Script" path="res://Scenes/Computer.gd" id="5_p80kc"]
[ext_resource type="AudioStream" uid="uid://bnl2xadvtaq6b" path="res://Sounds/254__noisecollector__pong-softsynth/4359__noisecollector__pongblipf4.wav" id="5_rplpl"]
[ext_resource type="Texture2D" uid="uid://b1bkcgml3xc0o" path="res://Assets/Ball.png" id="6_i6b7f"]
[ext_resource type="AudioStream" uid="uid://cqhd5bm768pej" path="res://Sounds/arcade-70780.mp3" id="9_h86fy"]
[ext_resource type="AudioStream" uid="uid://dv17d3weu1bdf" path="res://Sounds/8-bit-victory-sound-101319.mp3" id="11_w5uqh"]
[ext_resource type="AudioStream" uid="uid://bcwmeu35xtbhr" path="res://Sounds/TunePocket-3-2-1-Go-Preview.mp3" id="12_mui0h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oy2ng"]
size = Vector2(18.3233, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4wx5"]
size = Vector2(18.3232, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x01v8"]
size = Vector2(803.889, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_teq0x"]
size = Vector2(20, 453.909)

[sub_resource type="CircleShape2D" id="CircleShape2D_4mmm5"]
radius = 15.276

[node name="Board" type="Sprite2D"]
position = Vector2(576, 318)
scale = Vector2(1.38, 1.38)
texture = ExtResource("1_v3gex")
script = ExtResource("2_xiw4f")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(389.113, 0)
collision_mask = 3
script = ExtResource("2_t7nvd")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(0.000169337, -1.42515)
texture = ExtResource("3_81la5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0.838348, -0.356293)
shape = SubResource("RectangleShape2D_oy2ng")

[node name="Computer" type="CharacterBody2D" parent="."]
position = Vector2(-389.113, 0)
collision_mask = 3
script = ExtResource("5_p80kc")

[node name="Sprite2D" type="Sprite2D" parent="Computer"]
texture = ExtResource("4_vwvk0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Computer"]
position = Vector2(-0.838379, -0.356293)
shape = SubResource("RectangleShape2D_j4wx5")

[node name="Boundary" type="StaticBody2D" parent="."]
position = Vector2(0, -236.574)
collision_layer = 2

[node name="Bottom" type="CollisionShape2D" parent="Boundary"]
position = Vector2(0.346771, -0.712585)
shape = SubResource("RectangleShape2D_x01v8")

[node name="Top" type="CollisionShape2D" parent="Boundary"]
position = Vector2(0.346771, 474.573)
shape = SubResource("RectangleShape2D_x01v8")

[node name="GoalPostRight" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 3
position = Vector2(412.002, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalPostRight"]
light_mask = 2
position = Vector2(-3.05176e-05, 0.356277)
shape = SubResource("RectangleShape2D_teq0x")

[node name="GoalPostLeft" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GoalPostLeft"]
light_mask = 2
position = Vector2(-410.614, 0.356277)
shape = SubResource("RectangleShape2D_teq0x")

[node name="Ball" type="CharacterBody2D" parent="."]
visibility_layer = 3
position = Vector2(0, -2.85028)
collision_mask = 3
script = ExtResource("5_2pjcf")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture = ExtResource("6_i6b7f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_4mmm5")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 474.0
offset_right = 514.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 645.0
offset_right = 685.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_h86fy")
volume_db = 0.937

[node name="Score" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_w5uqh")

[node name="PaddleHit" type="AudioStreamPlayer2D" parent="."]
position = Vector2(389.113, 0)
stream = ExtResource("5_rplpl")

[node name="BallTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CountdownLabel" type="Label" parent="."]
visible = false
offset_left = -100.725
offset_top = -115.217
offset_right = 100.275
offset_bottom = -65.2174
theme_override_colors/font_color = Color(0.816212, 0.401163, 0.144691, 1)
theme_override_colors/font_shadow_color = Color(0.693068, 0.713592, 0.708574, 1)
theme_override_colors/font_outline_color = Color(0.0166357, 0.0184409, 0.0157785, 1)
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Countdown" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_mui0h")

[connection signal="body_entered" from="GoalPostRight" to="." method="_on_goal_post_right_body_entered"]
[connection signal="body_entered" from="GoalPostLeft" to="." method="_on_goal_post_left_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
